--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,6 @@
 * {
     color: white;
 }
-.input-cell {
-    width: 3rem;
-    height: 3rem;
-    background-color: white;
-    text-align: center;
-    border: 1px solid black;
-    color: gray;
-}
 
 input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
@@ -16,17 +8,26 @@ input[type="number"]::-webkit-outer-spin-button {
     margin: 0;
 }
 
-.settings-box {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    min-width: 30vh;
+.input-cell {
+    width: 3rem;
+    height: 3rem;
+    background-color: white;
+    text-align: center;
+    color: gray;
+    font-size: 1.5rem;
+    padding: 0;
+}
+
+.input-cell:disabled{
+    background-color: rgb(216, 235, 255);
+    color:black
 }
 
 .curved-box {
     border: 5px solid white;
     height: 15rem;
     width: 30rem;
+    margin: 3rem;
     border-radius: 50px;
 }
 
@@ -39,6 +40,54 @@ input[type="number"]::-webkit-outer-spin-button {
     top: 1.3rem;
     width: 1px;
     background-color: rgb(15, 23, 42);
+}
+
+
+.solution-buttons {
+    display: flex;
+    justify-content: space-around;
+    width: 30rem;
+}
+
+.ingame-buttons {
+    color:white;
+    padding: 5px 5px;
+    background-color: rgb(15,23,42);
+    font-weight: 700;
+    border-radius: 20px;
+    border:1px solid white;
+    width:9rem;
+}
+
+@media (max-width: 600px) {
+    /* your conditional / responsive CSS inside this condition */
+
+    .input-cell {
+        width: 2rem;
+        height: 2rem;
+    }
+
+    .curved-box {
+        height: 15rem;
+        width: 20rem;
+    }
+
+    .ingame-buttons {
+        width: 6rem;
+    }
+
+    .solution-buttons {
+        width:20rem;
+    }
+}
+
+
+
+.settings-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-width: 30vh;
 }
 
 .difficulty-toggle {
@@ -72,7 +121,13 @@ label {
     border-bottom-right-radius: 12px;
 }
 
-.validate-button {
-    
-    width:15rem;
+
+
+.bBorder {
+    /* background-color: red; */
+    border-bottom: 2px solid black;
+}
+
+.rBorder {
+    border-right: 2px solid black;
 }
