basic sudoku complete: all elements are functional

--- a/src/App.css
+++ b/src/App.css
@@ -18,14 +18,14 @@ input[type="number"]::-webkit-outer-spin-button {
     padding: 0;
 }
 
-.input-cell:disabled{
+.input-cell:disabled {
     background-color: rgb(216, 235, 255);
-    color:black
+    color: black;
 }
 
 .curved-box {
     border: 5px solid white;
-    height: 15rem;
+    height: 100%;
     width: 30rem;
     margin: 3rem;
     border-radius: 50px;
@@ -42,7 +42,6 @@ input[type="number"]::-webkit-outer-spin-button {
     background-color: rgb(15, 23, 42);
 }
 
-
 .solution-buttons {
     display: flex;
     justify-content: space-around;
@@ -50,13 +49,13 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 
 .ingame-buttons {
-    color:white;
+    color: white;
     padding: 5px 5px;
-    background-color: rgb(15,23,42);
+    background-color: rgb(15, 23, 42);
     font-weight: 700;
     border-radius: 20px;
-    border:1px solid white;
-    width:9rem;
+    border: 1px solid white;
+    width: 9rem;
 }
 
 @media (max-width: 600px) {
@@ -77,11 +76,9 @@ input[type="number"]::-webkit-outer-spin-button {
     }
 
     .solution-buttons {
-        width:20rem;
+        width: 20rem;
     }
 }
-
-
 
 .settings-box {
     display: flex;
@@ -121,8 +118,6 @@ label {
     border-bottom-right-radius: 12px;
 }
 
-
-
 .bBorder {
     /* background-color: red; */
     border-bottom: 2px solid black;
@@ -130,4 +125,10 @@ label {
 
 .rBorder {
     border-right: 2px solid black;
+}
+
+.wrong-input {
+    background-color: rgb(250, 149, 149);
+    color: darkred;
+    font-weight: 600;
 }
